# HaiGeSpider

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
B站/: B站视频标题获取.py  LaTeX视频合集的获取（xpath）.html  __init__.py  dnf合集的获取（xpath）.html  宋词宋史宋朝的获取（xpath）.html
CNVD/: 1.txt  2.js  2.txt  __init__.py  __jsl_clearance_s.js  cnvd.py  final.js  first.py  js_env.sh  second.py  sha1.js  test1.py
aHR0cHM6Ly9wYXNzcG9ydC55b3V6YW4uY29tL2xvZ2luL3Bhc3N3b3Jk/: aHR0cHM6Ly9wYXNzcG9ydC55b3V6YW4uY29tL2xvZ2luL3Bhc3N3b3Jk.py  sign.js
boss直聘/: __init__.py  boss_job.db  example.db  spider.py  sqlite3_boss.py  sqlite3_driver.py
imooc/: __init__.py
pic_netbian_com/: __init__.py  aiodownload.py  pic.netbian.com.py
python调用js/: __init__.py  add.js  方式3_selenium.py  方式5_DrissionPage.py  方式6_pyminiracer.py  方式7_playwright.py  方法1_execjs.py  方法2_nodejs.py  方法4_Js2Py.py
sz_58_com/: 58.csv  __init__.py  sz.58.com.py
www_17k_com/: __init__.py  www.17k.com.py
www_baidu_com/: __init__.py  www.baidu.com.py
www_pearvideo_com/: __init__.py  www.pearvideo.com.py
www_xinfadi_com_cn/: __init__.py  www.xinfadi.com.cn.py  xinfadi.csv
www_zanghaihua_org/: __init__.py  render.js  www.zanghaihua.org.py
www_zanghaihua_org/明朝那些事儿/: 前言.txt  引子.txt
京东/: __init__.py  商品评论.py  建水紫陶.csv
猿人学web逆向/: __init__.py
猿人学web逆向/题目1/: J.js  __init__.py  _m.js  airfare.py  hook.js  oo0O0.js  oo0O0_eval.js  start.js
猿人学web逆向/题目二/: 2.js  2_原始.js  2_反混淆.js  2_反混淆后再处理_.js  ck.js  (+9 more)
百度翻译/: fetch_cookie.py  requirements.txt  百度翻译.js  百度翻译_new.py  百度翻译_old.py  百度翻译ui.py
(+3 files in other folders)
