[tool.poetry]
name = "haige"
version = "0.1.0"
description = "依赖管理"
authors = ["lianhaifeng"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
lxml = "^4.9.3"
aiohttp = "^3.8.5"
aiofiles = "^23.2.1"
chardet = "^5.2.0"
playwright = "^1.37.0"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
